# Digital_Twin

./: ReadMe.md
src/ROS-TCP-Endpoint-main-ros2/launch/: endpoint.py
src/communication/: CMakeLists.txt  ReadMe.md  ReadMe.txt  package.xml  trial.json
src/communication/config/: robot_names.yaml  robots.yaml  robots_initial.yaml
src/communication/history/: initial_history.json  temp_history.json
src/communication/include/communication/: communicator.hpp  data_logger.hpp  day0_creation.hpp  request_STOD_server.hpp  request_history_server.hpp  setup.hpp
src/communication/include/communication/robot_monitor/: husky_robot.hpp  kobuki_robot.hpp  locobot_robot.hpp  robot_interface.hpp  robot_monitor_factory.hpp
src/communication/launch/: communication.launch.py
src/communication/navigation/: navigation.py
src/communication/references/: request_history_client.cpp
src/communication/scripts/: dummy_publisher.py  publish_joint_states.py
src/communication/src/: communicator.cpp  communicator_reference.cpp  data_logger.cpp  day0_creation.cpp  husky_manager.cpp  request_STOD_server.cpp  request_history_client.cpp  request_history_server.cpp  setup.cpp
src/communication/src/robot_monitor/: husky_robot.cpp  kobuki_robot.cpp  locobot_robot.cpp  robot_monitor_factory.cpp
src/customed_interfaces/: CMakeLists.txt  package.xml
src/customed_interfaces/msg/: HuskyStatus.msg  KobukiStatus.msg  LocobotStatus.msg  Object.msg
src/customed_interfaces/srv/: EditObjects.srv  RequestCategory.srv
